<resources>
    <string name="app_name">Samachar</string>
    <string name="api_key">e70f76a14817465d979fd81e76757676</string>
    <string name="home">Home</string>
    <string name="sports">Sports</string>
    <string name="science">Science</string>
    <string name="entertainment">Entertainment</string>
    <string name="technology">Technology</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="health">Health</string>
    <string name="main_headline">Main head line Main head line Main head line Main head line</string>
    <string name="content_heading">Content Heading Content Heading Content Heading Content Heading Content Heading Content Heading Content Heading</string>
</resources>